Updated build.properties with license and other files for src.includes

--- a/tests/org.eclipse.emf.teneo.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.tests/build.properties
@@ -14,6 +14,11 @@ src.includes = about.html,\
                test.xml,\
                epl-v10.html,\
                copyright.txt,\
-               src/
+               src/,\
+               about.ini,\
+               about.properties,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
 javacSource=1.5
 javacTarget=1.5
