--- a/plugins/org.eclipse.emf.teneo.eclipselink.elistfactory/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.elistfactory/build.properties
@@ -10,4 +10,11 @@ bin.includes = epl-v10.html,\
                .
 source.. = src/
 output.. = bin/
-src.includes = about.html
+src.includes = about.html,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               epl-v10.html,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
