Updated build.properties with license and other files for src.includes

--- a/plugins/org.eclipse.emf.teneo/build.properties
+++ b/plugins/org.eclipse.emf.teneo/build.properties
@@ -11,7 +11,12 @@ bin.includes = plugin.properties,\
                .
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt
+               copyright.txt,\
+               modeling32.png,\
+               license.html,\
+               plugin.properties,\
+               about.properties,\
+               about.ini
 jars.compile.order = .
 javacSource=1.5
 javacTarget=1.5
