Updated build.properties with license and other files for src.includes

--- a/plugins/org.eclipse.emf.teneo.hibernate.eclipse/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.eclipse/build.properties
@@ -13,6 +13,11 @@ bin.includes = plugin.properties,\
                src/org/eclipse/emf/teneo/hibernate/eclipse/messages.properties
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt
+               copyright.txt,\
+               about.ini,\
+               about.properties,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
 javacSource=1.5
 javacTarget=1.5
