Updated build.properties with license and other files for src.includes

--- a/tests/org.eclipse.emf.teneo.eclipselink.elistfactory.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.eclipselink.elistfactory.tests/build.properties
@@ -9,5 +9,12 @@ bin.includes = META-INF/,\
                plugin.properties
 source.. = src/
 output.. = bin/
-src.includes = about.html
+src.includes = about.html,\
+               about.ini,\
+               about.properties,\
+               epl-v10.html,\
+               copyright.txt,\
+               license.html,\
+               plugin.properties,\
+               modeling32.png
                
