Updated build.properties with license and other files for src.includes

--- a/tests/org.eclipse.emf.teneo.eclipselink.examples.library.orm.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.eclipselink.examples.library.orm.tests/build.properties
@@ -10,4 +10,11 @@ bin.includes = META-INF/,\
                about.html,\
                plugin.properties,\
                test.xml
-src.includes = about.html
+src.includes = about.html,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               epl-v10.html,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
