--- a/examples/org.eclipse.emf.teneo.samples/build.properties
+++ b/examples/org.eclipse.emf.teneo.samples/build.properties
@@ -81,6 +81,11 @@ bin.includes = plugin.properties,\
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
-               src/org/eclipse/emf/teneo/test.hbm.xml
+               src/org/eclipse/emf/teneo/test.hbm.xml,\
+               about.ini,\
+               about.properties,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
 javacSource=1.5
 javacTarget=1.5
