--- a/plugins/org.eclipse.emf.teneo.annotations/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.10 2009/05/13 10:23:11 mtaal Exp $
+# * $Id: plugin.properties,v 1.11 2009/06/11 04:59:35 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -31,3 +31,5 @@ Plugin.providerName = Eclipse Modeling Project
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
+pluginName = Pannotation Model
+providerName = www.example.org
