--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -1,16 +1,9 @@
 bin.includes = META-INF/,\
                readme.txt,\
                antlr-2.7.6.jar,\
-               asm.jar,\
-               cglib-2.1.3.jar,\
-               commons-collections-2.1.1.jar,\
-               commons-logging-1.0.4.jar,\
-               dom4j-1.6.1.jar,\
-               ejb3-persistence.jar,\
+               hibernate3.jar,\
                hibernate-annotations.jar,\
                hibernate-entitymanager.jar,\
-               jta.jar,\
-               log4j-1.2.11.jar,\
                c3p0-0.9.1.jar,\
                ehcache-1.2.3.jar,\
                hsqldb.jar,\
@@ -22,83 +15,29 @@ bin.includes = META-INF/,\
                plugin.properties,\
                mysql-connector-java-5.1.6-bin.jar,\
                hibernate-commons-annotations.jar,\
-               ant-1.6.5.jar,\
-               ant-antlr-1.6.5.jar,\
-               ant-junit-1.6.5.jar,\
-               ant-launcher-1.6.5.jar,\
-               ant-swing-1.6.5.jar,\
-               asm-attrs.jar,\
-               checkstyle-all.jar,\
-               cleanimports.jar,\
-               concurrent-1.3.2.jar,\
-               connector.jar,\
-               jaas.jar,\
-               jacc-1_0-fr.jar,\
-               javassist.jar,\
-               jaxen-1.1-beta-7.jar,\
-               jboss-archive-browsing.jar,\
-               jboss-cache.jar,\
-               jboss-common.jar,\
-               jboss-jmx.jar,\
-               jboss-system.jar,\
-               jdbc2_0-stdext.jar,\
-               jgroups-2.2.8.jar,\
-               jms.jar,\
-               junit-3.8.1.jar,\
-               lucene-core-2.2.0.jar,\
-               oscache-2.1.jar,\
-               proxool-0.8.3.jar,\
-               swarmcache-1.0rc2.jar,\
-               syndiag2.jar,\
-               versioncheck.jar,\
-               xerces-2.6.2.jar,\
-               xml-apis.jar,\
-               hibernate3.jar
-jars.extra.classpath = ant-antlr-1.6.5.jar,\
-                       antlr-2.7.6.jar,\
-                       asm.jar,\
-                       asm-attrs.jar,\
+               commons-collections-3.1.jar,\
+               hibernate_sources_3.3.jar,\
+               javassist-3.4.GA.jar,\
+               javax.persistence_1.99.0.jar,\
+               jta-1.1.jar,\
+               slf4j-api-1.5.2.jar,\
+               slf4j-nop-1.5.2.jar
+jars.extra.classpath = antlr-2.7.6.jar,\
                        c3p0-0.9.1.jar,\
-                       cglib-2.1.3.jar,\
-                       commons-collections-2.1.1.jar,\
-                       commons-logging-1.0.4.jar,\
+                       commons-collections-3.1.jar,\
                        dom4j-1.6.1.jar,\
-                       ejb3-persistence.jar,\
-                       hibernate3.jar,\
-                       hibernate-annotations.jar,\
-                       hibernate-entitymanager.jar,\
-                       javassist.jar,\
-                       jboss-archive-browsing.jar,\
-                       jta.jar,\
-                       ant-1.6.5.jar,\
-                       ant-junit-1.6.5.jar,\
-                       ant-launcher-1.6.5.jar,\
-                       ant-swing-1.6.5.jar,\
-                       checkstyle-all.jar,\
-                       cleanimports.jar,\
-                       concurrent-1.3.2.jar,\
-                       connector.jar,\
-                       jaas.jar,\
-                       jacc-1_0-fr.jar,\
-                       jaxen-1.1-beta-7.jar,\
-                       jboss-cache.jar,\
-                       jboss-common.jar,\
-                       jboss-jmx.jar,\
-                       jboss-system.jar,\
-                       jdbc2_0-stdext.jar,\
-                       jgroups-2.2.8.jar,\
-                       junit-3.8.1.jar,\
-                       log4j-1.2.11.jar,\
-                       oscache-2.1.jar,\
-                       proxool-0.8.3.jar,\
-                       swarmcache-1.0rc2.jar,\
-                       syndiag2.jar,\
-                       versioncheck.jar,\
-                       xerces-2.6.2.jar,\
-                       xml-apis.jar,\
                        ehcache-1.2.3.jar,\
+                       hibernate_sources_3.3.jar,\
+                       hibernate-annotations.jar,\
                        hibernate-commons-annotations.jar,\
-                       jms.jar,\
-                       lucene-core-2.2.0.jar
+                       hibernate-entitymanager.jar,\
+                       hibernate3.jar,\
+                       hsqldb.jar,\
+                       javassist-3.4.GA.jar,\
+                       javax.persistence_1.99.0.jar,\
+                       jta-1.1.jar,\
+                       mysql-connector-java-5.1.6-bin.jar,\
+                       slf4j-api-1.5.2.jar,\
+                       slf4j-nop-1.5.2.jar
 javacSource=1.5
 javacTarget=1.5
