--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -21,7 +21,8 @@ bin.includes = META-INF/,\
                javax.persistence_1.99.0.jar,\
                jta-1.1.jar,\
                slf4j-api-1.5.2.jar,\
-               slf4j-nop-1.5.2.jar
+               slf4j-nop-1.5.2.jar,\
+               commons-logging.jar
 jars.extra.classpath = antlr-2.7.6.jar,\
                        c3p0-0.9.1.jar,\
                        commons-collections-3.1.jar,\
@@ -38,6 +39,7 @@ jars.extra.classpath = antlr-2.7.6.jar,\
                        jta-1.1.jar,\
                        mysql-connector-java-5.1.6-bin.jar,\
                        slf4j-api-1.5.2.jar,\
-                       slf4j-nop-1.5.2.jar
+                       slf4j-nop-1.5.2.jar,\
+                       commons-logging.jar
 javacSource=1.5
 javacTarget=1.5
