Added dom4j and commons-logging to build.properties

--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -22,7 +22,9 @@ bin.includes = META-INF/,\
                jta-1.1.jar,\
                slf4j-api-1.5.2.jar,\
                slf4j-nop-1.5.2.jar,\
-               commons-logging.jar
+               commons-logging.jar,\
+               dom4j-1.6.1.jar,\
+               about.properties
 jars.extra.classpath = antlr-2.7.6.jar,\
                        c3p0-0.9.1.jar,\
                        commons-collections-3.1.jar,\
