[280600] Removed big ugly "Loading EMF Model From Database..." button

--- a/plugins/org.eclipse.emf.teneo.eclipselink.common.ui/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.common.ui/build.properties
@@ -8,7 +8,8 @@ bin.includes = META-INF/,\
                copyright.txt,\
                about.html,\
                .,\
-               plugin.properties
+               plugin.properties,\
+               plugin.xml
 src.includes = about.html,\
                about.properties,\
                about.ini,\
