--- a/plugins/org.eclipse.emf.teneo.eclipselink.common.ui/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.common.ui/plugin.properties
@@ -13,3 +13,4 @@
 pluginName = EMF Teneo EclipseLink Common UI Plug-in
 providerName = Eclipse Modeling Project
 
+importWizards.category.teneo.name=Teneo
