--- a/plugins/org.eclipse.emf.teneo.eclipselink.ui/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.ui/build.properties
@@ -9,7 +9,8 @@ bin.includes = META-INF/,\
                about.html,\
                .,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               icons/
 src.includes = about.html,\
                about.ini,\
                about.properties,\
