--- a/plugins/org.eclipse.emf.teneo.eclipselink.ui/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.ui/plugin.properties
@@ -13,3 +13,8 @@
 pluginName = EMF Teneo EclipseLink UI Plug-in
 providerName = Eclipse Modeling Project
 
+importWizards.category.eclipseLink.name=EclipseLink -- Don't know why but sub categories don't work somehow
+
+importWizards.modelFromDatabase.name=Model From Database (using EclipseLink)
+
+preferencePages.teneo.name=Teneo
