--- a/plugins/org.eclipse.emf.teneo.eclipselink.ui/plugin.xml
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.ui/plugin.xml
@@ -2,28 +2,26 @@
 <?eclipse version="3.0"?>
 <plugin>
    <extension
-         point="org.eclipse.ui.actionSets">
-      <actionSet
-            id="org.eclipse.emf.teneo.eclipselink.ui.actions.LoadModelFromDatabaseActionSet"
-            label="Load EMF Model from Database"
-            visible="true">
-         <action
-               class="org.eclipse.emf.teneo.eclipselink.ui.actions.EclipseLinkLoadModelFromDatabaseAction"
-               icon="icons/full/obj16/LoadModelFromDatabase.gif"
-               id="org.eclipse.emf.teneo.eclipselink.ui.actions.LoadModelFromDatabaseAction"
-               label="Load EMF Model from Database..."
-               menubarPath="file/new.ext"
-               style="push"
-               toolbarPath="file/new.ext"
-               tooltip="Load an EMF Model From Database"/>
-      </actionSet>
+         point="org.eclipse.ui.importWizards">
+      <category
+            id="org.eclipse.emf.teneo.eclipselink.ui.importWizards.category.eclipseLink"
+            name="%importWizards.category.eclipseLink.name"
+            parentCategory="org.eclipse.emf.teneo.eclipselink.common.ui.importWizards.category.teneo">
+      </category>
+      <wizard
+            category="org.eclipse.emf.teneo.eclipselink.common.ui.importWizards.category.teneo"
+            class="org.eclipse.emf.teneo.eclipselink.ui.wizards.EclipseLinkModelFromDatabaseImportWizard"
+            icon="$nl$/icons/full/etool16/importmdldb_wiz.gif"
+            id="org.eclipse.emf.teneo.eclipselink.ui.importWizards.modelFromDatabase"
+            name="%importWizards.modelFromDatabase.name">
+      </wizard>
    </extension>
 
    <extension
          point = "org.eclipse.ui.preferencePages">
-      <page id="org.eclipse.emf.teneo.eclipselink.ui.preferencepages.DatabasePreferencePage"
+      <page id="org.eclipse.emf.teneo.eclipselink.ui.preferencePages.teneo"
 	        class="org.eclipse.emf.teneo.eclipselink.common.ui.preferencepages.BasicDatabasePreferencePage"
-            name="Database">
+            name="%preferencePages.teneo.name">
       </page>
    </extension>
 
