--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/.classpath
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/.classpath
@@ -17,10 +17,10 @@
 	<classpathentry exported="true" kind="lib" path="hibernate3.jar"/>
 	<classpathentry exported="true" kind="lib" path="javax.persistence_1.99.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="commons-collections-3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="javassist-3.4.GA.jar"/>
 	<classpathentry exported="true" kind="lib" path="jta-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="slf4j-api-1.5.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="hibernate-entitymanager.jar"/>
-	<classpathentry kind="lib" path="hibernate_sources_3.3.jar"/>
+	<classpathentry kind="lib" path="javassist-3.9.0.GA.jar"/>
+	<classpathentry kind="lib" path="slf4j-api-1.5.8.jar"/>
+	<classpathentry kind="lib" path="slf4j-nop-1.5.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
