--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -60,7 +60,8 @@ bin.includes = META-INF/,\
                commons-collections-3.1.jar,\
                slf4j-nop-1.5.2.jar,\
                slf4j-api-1.5.8.jar,\
-               slf4j-nop-1.5.8.jar
+               slf4j-nop-1.5.8.jar,\
+               javassist-3.9.0.GA.jar
 jars.extra.classpath = antlr-2.7.6.jar,\
                        c3p0-0.9.1.jar,\
                        commons-collections-3.1.jar,\
