--- a/plugins/org.eclipse.emf.teneo.orm/plugin.xml
+++ b/plugins/org.eclipse.emf.teneo.orm/plugin.xml
@@ -5,7 +5,7 @@
  <copyright>
  </copyright>
 
- $Id: plugin.xml,v 1.1 2009/03/15 23:45:03 mtaal Exp $
+ $Id: plugin.xml,v 1.2 2009/07/06 13:23:39 mtaal Exp $
 -->
 
 <plugin>
@@ -13,14 +13,14 @@
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
             uri="http://java.sun.com/xml/ns/persistence/orm"
-            class="com.sun.java.xml.ns.persistence.orm.OrmPackage"
+            class="org.eclipse.emf.teneo.jpa.orm.OrmPackage"
             genModel="model/orm.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.extension_parser">
       <parser
             type="orm"
-            class="com.sun.java.xml.ns.persistence.orm.util.OrmResourceFactoryImpl"/>
+            class="org.eclipse.emf.teneo.jpa.orm.util.OrmResourceFactoryImpl"/>
    </extension>
 
 </plugin>
