--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/emft_test.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/emft_test.properties
@@ -10,25 +10,30 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: emft_test.properties,v 1.6 2008/03/30 15:11:58 mtaal Exp $
+# $Id: emft_test.properties,v 1.6.2.1 2009/07/09 10:31:59 mtaal Exp $
 
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
 # <cfgname>.mapstrategy= mapping strategy, either SINGLE_TABLE or JOINED 
 # <cfgname>.optimistic= optimistic setting, either true or false
 
-mysql_s_o.dbadapter=mysql
-mysql_s_o.mapstrategy=JOINED
-mysql_s_o.optimistic=true
+#mysql_s_o.dbadapter=mysql
+#mysql_s_o.mapstrategy=JOINED
+#mysql_s_o.optimistic=true
 
-mysql_e_o.ejb3=true
-mysql_e_o.dbadapter=mysql
-mysql_e_o.mapstrategy=JOINED
-mysql_e_o.optimistic=true
+#mysql_e_o.ejb3=true
+#mysql_e_o.dbadapter=mysql
+#mysql_e_o.mapstrategy=JOINED
+#mysql_e_o.optimistic=true
 
 hsqldb_h_o.dbadapter=hsqldbmem
 hsqldb_h_o.mapstrategy=SINGLE_TABLE
 hsqldb_h_o.optimistic=true
+
+hsqldb_e_o.ejb3=true
+hsqldb_e_o.dbadapter=hsqldbmem
+hsqldb_e_o.mapstrategy=JOINED
+hsqldb_e_o.optimistic=true
 
 #pgsql_a_o.dbadapter=pgsql
 #pgsql_a_o.mapstrategy=SINGLE_TABLE
