--- a/plugins/org.eclipse.emf.teneo.orm/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.orm/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.4 2009/05/13 10:24:03 mtaal Exp $
+# * $Id: plugin.properties,v 1.5 2009/07/23 11:16:30 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -31,3 +31,5 @@ Plugin.providerName = Eclipse Modeling Project
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
+pluginName = Orm Model
+providerName = www.example.org
