--- a/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
@@ -1,5 +1,5 @@
 # Set root logger level to error and its only appender to A1.
-log4j.rootCategory=ERROR, A1
+log4j.rootCategory=DEBUG, A1
 
 log4j.category.JPOX=ERROR
 log4j.category.JPOX.JDO=ERROR, A1
@@ -23,38 +23,38 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
-#log4j.logger.org.hibernate=error
-log4j.logger.org.hibernate=error
+#log4j.logger.org.hibernate=debug
+log4j.logger.org.hibernate=debug
 #org.hibernate.pretty
 
 ### log HQL query parser activity
-log4j.logger.org.hibernate.hql.ast.AST=error
+log4j.logger.org.hibernate.hql.ast.AST=debug
 
 ### log just the SQL
-log4j.logger.org.hibernate.SQL=error
+log4j.logger.org.hibernate.SQL=debug
 
 ### log JDBC bind parameters ###
-log4j.logger.org.hibernate.type=error
-#log4j.logger.org.hibernate.type=error
+log4j.logger.org.hibernate.type=debug
+#log4j.logger.org.hibernate.type=debug
 
 ### log schema export/update ###
-log4j.logger.org.hibernate.tool.hbm2ddl=error
+log4j.logger.org.hibernate.tool.hbm2ddl=debug
 
 ### log HQL parse trees
-log4j.logger.org.hibernate.hql=error
+log4j.logger.org.hibernate.hql=debug
 
 ### log cache activity ###
-log4j.logger.org.hibernate.cache=error
+log4j.logger.org.hibernate.cache=debug
 
 ### log transaction activity
-log4j.logger.org.hibernate.transaction=error
+log4j.logger.org.hibernate.transaction=debug
 
 ### log JDBC resource acquisition
-log4j.logger.org.hibernate.jdbc=error
+log4j.logger.org.hibernate.jdbc=debug
 
 ### enable the following line if you want to track down connection ###
 ### leakages when using DriverManagerConnectionProvider ###
-log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=error
+log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=debug
 
 
 ### log Teneo
