--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.xml,\
                copyright.txt,\
                about.html,\
                org.eclipse.emf.teneo.hibernate.extra.jar,\
-               .
+               .,\
+               src/org/eclipse/emf/teneo/hibernate/mapping/eav/eav.hbm.xml
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
