Added feature map support to EAV Schema Further improved EAV Schema handling

--- a/plugins/org.eclipse.emf.teneo.annotations/build.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/build.properties
@@ -1,24 +1,14 @@
+
+# <copyright>
+# </copyright>
+#
+# $Id: build.properties,v 1.10 2009/08/21 10:16:53 mtaal Exp $
+
+bin.includes = .,\
+               model/,\
+               META-INF/,\
+               plugin.xml,\
+               plugin.properties
+jars.compile.order = .
 source.. = src/
 output.. = bin/
-bin.includes = plugin.xml,\
-               plugin.properties,\
-               META-INF/,\
-               epl-v10.html,\
-               modeling32.png,\
-               about.ini,\
-               about.properties,\
-               copyright.txt,\
-               .,\
-               model/,\
-               about.html
-src.includes = about.html,\
-               epl-v10.html,\
-               copyright.txt,\
-               model/,\
-               license.html,\
-               about.ini,\
-               about.properties,\
-               plugin.properties,\
-               modeling32.png
-javacSource=1.5
-javacTarget=1.5
