--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/.classpath
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="slf4j-log4j12-1.5.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="log4j-1.2.8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins">
 		<accessrules>
