--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -21,7 +21,9 @@ bin.includes = META-INF/,\
                slf4j-nop-1.5.8.jar,\
                javassist-3.9.0.GA.jar,\
                commons-collections-3.1.jar,\
-               dom4j-1.6.1.jar
+               dom4j-1.6.1.jar,\
+               log4j-1.2.8.jar,\
+               slf4j-log4j12-1.5.8.jar
 jars.extra.classpath = antlr-2.7.6.jar,\
                        c3p0-0.9.1.jar,\
                        commons-collections-3.1.jar,\
