Support for EAV Schema and Mapping

--- a/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.22 2009/06/08 15:47:38 mtaal Exp $
+# $Id: build.properties,v 1.23 2009/08/21 15:02:11 mtaal Exp $
 
 bin.includes = .,\
                META-INF/,\
@@ -13,7 +13,8 @@ bin.includes = .,\
                src/org/eclipse/emf/teneo/hibernate/test/emf/test.hbm.xml,\
                src/org/eclipse/emf/teneo/hibernate/test/test.persistence.xml,\
                src/org/eclipse/emf/teneo/hibernate/test/emf/test2.hbm.xml,\
-               src/org/eclipse/emf/teneo/hibernate/test/ops_persistence.xml
+               src/org/eclipse/emf/teneo/hibernate/test/ops_persistence.xml,\
+               src/log4j.properties
 jars.compile.order = .
 source.. = src/
 output.. = bin/
