--- a/examples/org.eclipse.emf.teneo.samples/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.samples/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.10 2009/05/23 10:49:52 mtaal Exp $
+# * $Id: plugin.properties,v 1.11 2009/08/23 16:04:41 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -33,3 +33,21 @@ Plugin.providerName = Eclipse Modeling Project
 # ==============================================================================
 pluginName = Bz277546 Model
 providerName = www.example.org
+_UI_CreateChild_text = {0}
+_UI_CreateChild_text2 = {1} {0}
+_UI_CreateChild_text3 = {1}
+_UI_CreateChild_tooltip = Create New {0} Under {1} Feature
+_UI_CreateChild_description = Create a new child of type {0} for the {1} feature of the selected {2}.
+_UI_CreateSibling_description = Create a new sibling of type {0} for the selected {2}, under the {1} feature of their parent.
+_UI_PropertyDescriptor_description = The {0} of the {1}
+_UI_Family_type = Family
+_UI_Person_type = Person
+_UI_Note_type = Note
+_UI_Unknown_type = Object
+_UI_Unknown_datatype= Value
+_UI_Family_string_feature = String
+_UI_Family_persons_feature = Persons
+_UI_Person_notes_feature = Notes
+_UI_Person_parents_feature = Parents
+_UI_Note_name_feature = Name
+_UI_Unknown_feature = Unspecified
