--- a/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
@@ -14,7 +14,7 @@ log4j.category.JPOX.Plugin=ERROR, A1
 log4j.category.JPOX.Store.Poid=ERROR, A1
 
 log4j.category.JPOX.Enhancer=ERROR, A1
-log4j.category.JPOX.SchemaTool=ERROR, A1
+log4j.category.JPOX.SchemaTool=error, A1
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
