--- a/plugins/org.eclipse.emf.teneo.hibernate.mapper/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.mapper/build.properties
@@ -1,22 +1,14 @@
+
+# <copyright>
+# </copyright>
+#
+# $Id: build.properties,v 1.8 2009/09/13 14:45:39 mtaal Exp $
+
+bin.includes = .,\
+               model/,\
+               META-INF/,\
+               plugin.xml,\
+               plugin.properties
+jars.compile.order = .
 source.. = src/
 output.. = bin/
-bin.includes = plugin.properties,\
-               META-INF/,\
-               epl-v10.html,\
-               modeling32.png,\
-               about.ini,\
-               about.properties,\
-               copyright.txt,\
-               .,\
-               about.html
-src.includes = about.html,\
-               epl-v10.html,\
-               copyright.txt,\
-               model/,\
-               about.ini,\
-               about.properties,\
-               license.html,\
-               modeling32.png,\
-               plugin.properties
-javacSource=1.5
-javacTarget=1.5
