--- a/examples/org.eclipse.emf.teneo.samples/build.properties
+++ b/examples/org.eclipse.emf.teneo.samples/build.properties
@@ -2,13 +2,14 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.23 2009/07/27 22:12:09 mtaal Exp $
+# $Id: build.properties,v 1.24 2009/10/09 22:59:59 mtaal Exp $
 
 bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               src/org/eclipse/emf/teneo/samples/issues/bz284859/hibernate.hbm.xml
 jars.compile.order = .
 source.. = src/
 output.. = bin/
