--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -23,7 +23,10 @@ bin.includes = META-INF/,\
                commons-collections-3.1.jar,\
                dom4j-1.6.1.jar,\
                log4j-1.2.8.jar,\
-               slf4j-log4j12-1.5.8.jar
+               slf4j-log4j12-1.5.8.jar,\
+               javassist-3.11.0.GA.jar,\
+               cglib-2.2.jar,\
+               asm-3.2.jar
 jars.extra.classpath = antlr-2.7.6.jar,\
                        c3p0-0.9.1.jar,\
                        commons-collections-3.1.jar,\
@@ -37,8 +40,9 @@ jars.extra.classpath = antlr-2.7.6.jar,\
                        jta-1.1.jar,\
                        mysql-connector-java-5.1.6-bin.jar,\
                        hibernate-entitymanager.jar,\
-                       javassist-3.9.0.GA.jar,\
                        slf4j-api-1.5.8.jar,\
-                       slf4j-nop-1.5.8.jar
+                       slf4j-nop-1.5.8.jar,\
+                       javassist-3.11.0.GA.jar,\
+                       asm-3.2.jar
 javacSource=1.5
 javacTarget=1.5
