--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/.classpath
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/.classpath
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="asm-3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="cglib-2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="javassist-3.11.0.GA.jar"/>
 	<classpathentry exported="true" kind="lib" path="slf4j-log4j12-1.5.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="log4j-1.2.8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
@@ -21,7 +24,6 @@
 	<classpathentry exported="true" kind="lib" path="commons-collections-3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="jta-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="hibernate-entitymanager.jar"/>
-	<classpathentry kind="lib" path="javassist-3.9.0.GA.jar"/>
 	<classpathentry kind="lib" path="slf4j-api-1.5.8.jar"/>
 	<classpathentry kind="lib" path="slf4j-nop-1.5.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
