--- a/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.23 2009/08/21 15:02:11 mtaal Exp $
+# $Id: build.properties,v 1.24 2009/10/15 20:49:02 mtaal Exp $
 
 bin.includes = .,\
                META-INF/,\
@@ -14,7 +14,8 @@ bin.includes = .,\
                src/org/eclipse/emf/teneo/hibernate/test/test.persistence.xml,\
                src/org/eclipse/emf/teneo/hibernate/test/emf/test2.hbm.xml,\
                src/org/eclipse/emf/teneo/hibernate/test/ops_persistence.xml,\
-               src/log4j.properties
+               src/log4j.properties,\
+               src/tmp_hibernate.properties
 jars.compile.order = .
 source.. = src/
 output.. = bin/
