--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -43,6 +43,7 @@ jars.extra.classpath = antlr-2.7.6.jar,\
                        slf4j-api-1.5.8.jar,\
                        slf4j-nop-1.5.8.jar,\
                        javassist-3.11.0.GA.jar,\
-                       asm-3.2.jar
+                       asm-3.2.jar,\
+                       cglib-2.2.jar
 javacSource=1.5
 javacTarget=1.5
