Moved Hibernate to downloadable dependency, updated docs, changed dependency to import packages

--- a/examples/org.eclipse.emf.teneo.tutorial/build.properties
+++ b/examples/org.eclipse.emf.teneo.tutorial/build.properties
@@ -2,22 +2,13 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.13 2009/05/06 17:10:50 mtaal Exp $
+# $Id: build.properties,v 1.14 2010/01/23 08:29:12 mtaal Exp $
 
 bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties,\
-               about.html,\
-               about.ini,\
-               about.properties,\
-               copyright.txt,\
-               epl-v10.html,\
-               modeling32.png
+               plugin.properties
 jars.compile.order = .
 source.. = src/
 output.. = bin/
-javacSource = 1.5
-javacTarget = 1.5
-jars.extra.classpath = platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar
