--- a/examples/org.eclipse.emf.teneo.tutorial/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.tutorial/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.1 2008/06/07 21:50:39 mtaal Exp $
+# * $Id: plugin.properties,v 1.2 2010/01/23 08:29:12 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -31,3 +31,5 @@ Plugin.providerName = Eclipse.org
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
+pluginName = Library Model
+providerName = www.example.org
