Moved Hibernate to downloadable dependency, updated docs, changed dependency to import packages

--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -22,12 +22,6 @@ javacSource=1.5
 javacTarget=1.5
 jars.compile.order = org.eclipse.emf.teneo.hibernate.jar,\
                      .
-jars.extra.classpath = org.eclipse.emf.teneo.hibernate.extra.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/dom4j-1.6.1.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-entitymanager.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/javax.persistence_1.99.0.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-annotations.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-commons-annotations.jar
+jars.extra.classpath = org.eclipse.emf.teneo.hibernate.extra.jar
 source.. = src/
 output.. = bin/
