--- a/features/org.eclipse.emf.teneo.hibernate-feature/about.properties
+++ b/features/org.eclipse.emf.teneo.hibernate-feature/about.properties
@@ -1,7 +1,7 @@
 #/**
 # * <copyright>
 # *
-# * Copyright (c) 2005, 2006, 2007, 2008 Springsite BV (The Netherlands) and others
+# * Copyright (c) 2010 Springsite BV (The Netherlands) and others
 # * All rights reserved. This program and the accompanying materials
 # * are made available under the terms of the Eclipse Public License v1.0
 # * which accompanies this distribution, and is available at
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: about.properties,v 1.1 2010/02/02 22:55:24 mtaal Exp $
+# * $Id: about.properties,v 1.2 2010/02/02 23:44:09 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -30,15 +30,15 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-featureName=Eclipse Modeling Framework Technology Object Relational Persistence
+featureName=EMF Teneo ORM
 
-featureText=Eclipse Modeling Framework Technology Object Relational Persistence \n\
+featureText=EMF Teneo ORM \n\
 Version: {featureVersion}\n\
 Build id: {0}\n\
 \n\
-(c) Copyright Springsite BV (The Netherlands) and others, 2006-2009.  All rights reserved.\n\
+(c) Copyright Springsite BV (The Netherlands) and others, 2010.  All rights reserved.\n\
 \n\
-Visit http://www.eclipse.org/emft
+Visit http://www.eclipse.org/emf
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
