--- a/features/org.eclipse.emf.teneo.hibernate-feature/build.properties
+++ b/features/org.eclipse.emf.teneo.hibernate-feature/build.properties
@@ -1,1 +1,8 @@
-bin.includes = feature.xml
+bin.includes = feature.xml,\
+               about.html,\
+               about.ini,\
+               about.properties,\
+               epl-v10.html,\
+               feature.properties,\
+               license.html,\
+               modeling32.png
