--- a/releng/org.eclipse.emf.teneo.releng.buckminster/build.properties
+++ b/releng/org.eclipse.emf.teneo.releng.buckminster/build.properties
@@ -1,1 +1,13 @@
-bin.includes = feature.xml
+bin.includes = feature.xml,\
+               buckminster.properties,\
+               buckminster.cspec,\
+               about.html,\
+               copyright.txt,\
+               eclipse.gif,\
+               eclipse_update_120.jpg,\
+               epl-v10.html,\
+               feature.properties,\
+               license.html,\
+               teneo.cquery,\
+               teneo.mspec,\
+               teneo.rmap
