--- a/features/org.eclipse.emf.teneo.hibernate-feature/feature.properties
+++ b/features/org.eclipse.emf.teneo.hibernate-feature/feature.properties
@@ -10,7 +10,7 @@
 #############################################################################
 
 # "featureName" property - name of the feature
-featureName=Teneo Hibernate
+featureName=EMF Teneo Hibernate
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse Modeling Project
@@ -19,7 +19,7 @@ providerName=Eclipse Modeling Project
 updateSiteName=Eclipse Modeling Framework Updates
 
 # "description" property - description of the feature
-description=Teneo Hibernate includes the runtime plugins
+description=Teneo Hibernate provides the EMF Hibernate integration.
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
