--- a/releng/org.eclipse.emf.teneo.releng.buckminster/build.properties
+++ b/releng/org.eclipse.emf.teneo.releng.buckminster/build.properties
@@ -10,4 +10,5 @@ bin.includes = feature.xml,\
                license.html,\
                teneo.cquery,\
                teneo.mspec,\
-               teneo.rmap
+               teneo.rmap,\
+               category.xml
