--- a/releng/org.eclipse.emf.teneo.releng.buckminster/feature.properties
+++ b/releng/org.eclipse.emf.teneo.releng.buckminster/feature.properties
@@ -17,7 +17,7 @@
 # ==============================================================================
 
 providerName = Eclipse Modeling Project
-featureName = Teneo Releng Buckminster
+featureName = EMF Teneo
 description = Teneo 
 
 copyrightURL = copyright.txt
