--- a/plugins/org.eclipse.emf.teneo.orm.eclipse/build.properties
+++ b/plugins/org.eclipse.emf.teneo.orm.eclipse/build.properties
@@ -16,5 +16,4 @@ src.includes = about.html,\
                copyright.txt,\
                epl-v10.html,\
                modeling32.png,\
-               license.html,\
-               plugin.properties
+               license.html
