--- a/plugins/org.eclipse.emf.teneo.orm/build.properties
+++ b/plugins/org.eclipse.emf.teneo.orm/build.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.4 2009/06/08 15:47:50 mtaal Exp $
+# $Id: build.properties,v 1.5 2010/02/04 10:53:02 mtaal Exp $
 
 bin.includes = .,\
                model/,\
@@ -24,5 +24,4 @@ src.includes = about.html,\
                copyright.txt,\
                epl-v10.html,\
                license.html,\
-               modeling32.png,\
-               plugin.properties
+               modeling32.png
