--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -1,5 +1,4 @@
-bin.includes = plugin.xml,\
-               plugin.properties,\
+bin.includes = plugin.properties,\
                META-INF/,\
                epl-v10.html,\
                modeling32.png,\
@@ -15,8 +14,7 @@ src.includes = about.html,\
                about.ini,\
                about.properties,\
                license.html,\
-               modeling32.png,\
-               plugin.properties
+               modeling32.png
 javacSource=1.5
 javacTarget=1.5
 jars.compile.order = org.eclipse.emf.teneo.hibernate.jar,\
