--- a/plugins/org.eclipse.emf.teneo.eclipselink.ui/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.ui/build.properties
@@ -17,5 +17,4 @@ src.includes = about.html,\
                copyright.txt,\
                epl-v10.html,\
                license.html,\
-               modeling32.png,\
-               plugin.properties
+               modeling32.png
