--- a/plugins/org.eclipse.emf.teneo.eclipselink/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink/build.properties
@@ -16,6 +16,5 @@ src.includes = about.html,\
                copyright.txt,\
                epl-v10.html,\
                license.html,\
-               modeling32.png,\
-               plugin.properties
+               modeling32.png
                
