--- a/plugins/org.eclipse.emf.teneo.hibernate.eclipse/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.eclipse/build.properties
@@ -17,7 +17,6 @@ src.includes = about.html,\
                about.ini,\
                about.properties,\
                license.html,\
-               modeling32.png,\
-               plugin.properties
+               modeling32.png
 javacSource=1.5
 javacTarget=1.5
