--- a/plugins/org.eclipse.emf.teneo.eclipse/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipse/build.properties
@@ -16,8 +16,7 @@ src.includes = about.html,\
                about.properties,\
                about.ini,\
                license.html,\
-               modeling32.png,\
-               plugin.properties
+               modeling32.png
 jars.compile.order = .
 javacSource=1.5
 javacTarget=1.5
