Rework to create build and test setup

--- a/releng/org.eclipse.emf.teneo.releng.buckminster/buckminster.properties
+++ b/releng/org.eclipse.emf.teneo.releng.buckminster/buckminster.properties
@@ -6,7 +6,7 @@
 #
 
 # Is used to select the dependency location in the rmap
-build.type=N
+# build.type=N
 
 # Where all the output should go
 #buckminster.output.root=${user.home}/mydata/Projects/Teneo/build/builds/output
