--- a/features/org.eclipse.emf.teneo.hibernate-feature/about.properties
+++ b/features/org.eclipse.emf.teneo.hibernate-feature/about.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: about.properties,v 1.2 2010/02/02 23:44:09 mtaal Exp $
+# * $Id: about.properties,v 1.3 2010/02/05 21:33:42 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -30,9 +30,9 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-featureName=EMF Teneo ORM
+featureName=EMF Teneo Hibernate Runtime
 
-featureText=EMF Teneo ORM \n\
+featureText=EMF Teneo Hibernate Runtime \n\
 Version: {featureVersion}\n\
 Build id: {0}\n\
 \n\
