Created hudson test properties

--- a/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
@@ -1,11 +1,10 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.27 2010/02/05 22:54:00 mtaal Exp $
+# $Id: build.properties,v 1.28 2010/02/06 16:41:51 mtaal Exp $
 
 bin.includes = .,\
                META-INF/,\
-               plugin.xml,\
                plugin.properties,\
                src/dbadapters.properties,\
                hbm/,\
@@ -14,7 +13,6 @@ bin.includes = .,\
                src/org/eclipse/emf/teneo/hibernate/test/test.persistence.xml,\
                src/org/eclipse/emf/teneo/hibernate/test/emf/test2.hbm.xml,\
                src/org/eclipse/emf/teneo/hibernate/test/ops_persistence.xml,\
-               src/log4j.properties,\
                src/tmp_hibernate.properties,\
                src/local_test.properties,\
                src/hudson_test.properties,\
@@ -41,5 +39,4 @@ src.includes = hbm/,\
                copyright.txt,\
                epl-v10.html,\
                license.html,\
-               modeling32.png,\
-               plugin.properties
+               modeling32.png
