--- a/tests/org.eclipse.emf.teneo.eclipselink.examples.library.orm.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.eclipselink.examples.library.orm.tests/build.properties
@@ -16,5 +16,4 @@ src.includes = about.html,\
                copyright.txt,\
                epl-v10.html,\
                license.html,\
-               modeling32.png,\
-               plugin.properties
+               modeling32.png
