--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library/build.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library/build.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.4 2009/06/08 15:47:57 mtaal Exp $
+# $Id: build.properties,v 1.5 2010/02/06 21:19:15 mtaal Exp $
 
 bin.includes = .,\
                epl-v10.html,\
@@ -24,5 +24,4 @@ src.includes = about.html,\
                copyright.txt,\
                license.html,\
                epl-v10.html,\
-               modeling32.png,\
-               plugin.properties
+               modeling32.png
