--- a/releng/org.eclipse.emf.teneo.releng.buckminster/buckminster.properties
+++ b/releng/org.eclipse.emf.teneo.releng.buckminster/buckminster.properties
@@ -41,6 +41,6 @@ signing.type=eclipse.local
 #signing.type=eclipse.remote
 
 teneo.download.area=/home/data/httpd/download.eclipse.org/modeling/emf/teneo
-eclipse.download.prefix=file:/home/data/httpd/download.eclipse.org
-
+buckminster.p2.site=http://download.eclipse.org/tools/buckminster/headless-3.6
+director.url=http://download.eclipse.org/tools/buckminster/products/director_latest.zip
 eclipse.staging.area=${env.HUDSON_HOME}/jobs/${env.JOB_NAME}/signing
