--- a/features/org.eclipse.emf.teneo.hibernate.sdk-feature/feature.properties
+++ b/features/org.eclipse.emf.teneo.hibernate.sdk-feature/feature.properties
@@ -10,7 +10,7 @@
 #############################################################################
 
 # "featureName" property - name of the feature
-featureName=EMF Teneo Hibernate Runtime
+featureName=EMF Teneo Hibernate SDK
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse Modeling Project
