Added dependency on init.build.properties

--- a/releng/org.eclipse.emf.teneo.releng.buckminster/build.xml
+++ b/releng/org.eclipse.emf.teneo.releng.buckminster/build.xml
@@ -74,7 +74,7 @@ http://dev.eclipse.org/viewsvn/index.cgi/trunk/org.eclipse.buckminster.releng/bu
 		<ant dir="${basedir}/test" antfile="teneo_test.xml" target="run" inheritRefs="true" />
 	</target>
 
-	<target name="promote">
+	<target name="promote" depends="init.build.properties">
 		<echo message="Promoting" />
 		<buckminster command="import" workspace="${workspacePath}">
 			<cmdargs>
@@ -148,5 +148,25 @@ http://dev.eclipse.org/viewsvn/index.cgi/trunk/org.eclipse.buckminster.releng/bu
 			</args>
 		</eclipse.launch>
 	</target>
-
+	
+	<target name="init.build.properties">
+		<!-- Echo relevant properties to a temporary file so that Buckminster can read them
+		  -->
+		<tempfile destdir="${java.io.tmpdir}" prefix="build-" suffix=".properties" deleteonexit="true" property="properties.tmp" />
+		<echoproperties destfile="${properties.tmp}">
+			<!-- We don't want these. basedir in particular will cause problems if passed explicitly -->
+			<propertyset negate="true">
+				<propertyref name="basedir" />
+				<propertyref name="eclipse.home" />
+				<propertyref name="properties.tmp" />
+				<propertyref name="line.separator" />
+				<propertyref name="path.separator" />
+				<propertyref prefix="ant." />
+				<propertyref prefix="file." />
+				<propertyref prefix="java." />
+				<propertyref prefix="sun." />
+				<propertyref prefix="user." />
+			</propertyset>
+		</echoproperties>
+	</target>
 </project>
