--- a/releng/org.eclipse.emf.teneo.releng.buckminster/buckminster.properties
+++ b/releng/org.eclipse.emf.teneo.releng.buckminster/buckminster.properties
@@ -24,10 +24,10 @@ qualifier.replacement.*=generator:buildTimestamp
 generator.buildTimestamp.format='v'yyyyMMddHHmm
 
 # If a site should use pack200, turn off for faster build
-site.pack200=false
+#site.pack200=false
 
 # If a site should be signed
-site.signing=false
+#site.signing=false
 
 # Should source bundles be built and included
 cbi.include.source=true
