rolled back change in xslt enabled emma

--- a/releng/org.eclipse.emf.teneo.releng.buckminster/build.xml
+++ b/releng/org.eclipse.emf.teneo.releng.buckminster/build.xml
@@ -145,6 +145,8 @@ http://dev.eclipse.org/viewsvn/index.cgi/trunk/org.eclipse.buckminster.releng/bu
 				<arg value="org.eclipse.buckminster.pde.headless.feature.feature.group" />
 				<arg value="-i" />
 				<arg value="org.eclipse.buckminster.cvs.headless.feature.feature.group" />
+				<arg value="-i" />
+				<arg value="org.eclipse.buckminster.emma.headless.feature.feature.group" />
 			</args>
 		</eclipse.launch>
 	</target>
