create plugins and features project

--- a/releng/org.eclipse.emf.teneo.releng.buckminster/build.xml
+++ b/releng/org.eclipse.emf.teneo.releng.buckminster/build.xml
@@ -82,7 +82,10 @@ http://dev.eclipse.org/viewsvn/index.cgi/trunk/org.eclipse.buckminster.releng/bu
 		<echo message="To ${promoteTargetPath}" />
 
 		<delete dir="${promoteTargetPath}" quiet="true" />
-		<mkdir dir="${promoteTargetPath}" />
+		<mkdir dir="${promoteTargetPath}" quiet="true"/>
+		<mkdir dir="${promoteTargetPath}/plugins" quiet="true"/>
+		<mkdir dir="${promoteTargetPath}/features" quiet="true"/>
+		
 		<copy todir="${promoteTargetPath}">
 			<fileset dir="${buildSitePath}">
 				<include name="**/*" />
